<resources>
    <string name="app_name">CloudAppFirebase</string>
    <string name="type_your_password" />
    <string name="email" />
    <string name="full_name" />
    <string name="course" />
    <string name="year" />
    <string name="retype_your_password" />
    <string name="sign_up" />
    <string name="already_registered_sign_in" />
    <string name="type_password">type_your_password</string>
    <string name="password">Password:</string>
    <string name="retype_password">Retype Password:</string>
    <string name="signUp">Sign Up</string>
    <string name="already_registered_signIn">Already Registered? Sign In !</string>
    <string name="studentid">studentID:</string>
    <string name="fullName">Full Name:</string>
    <string name="c_year">Year:</string>
    <string name="applicant_name" />
    <string name="x_axis">X-Axis</string>
    <string name="y_axis">Y-Axis</string>
    <string name="z_axis">Z-Axis</string>
</resources>